# placer

./: Cargo.toml  README.md  placer.toml.example
placer-pack/: .gitignore  Cargo.toml  README.md  build.rs
placer-pack/protos/: README.md  pack.proto  timestamp.proto
placer-pack/src/: crypto.rs  error.rs  keyrings.rs  keyuri.rs  lib.rs  macros.rs  pack.rs  protos.rs
placer-pack/src/crypto/: encryptor.rs  signing.rs
placer-pack/src/crypto/signing/: public_key.rs  signer.rs
placer-pack/src/keyrings/: config.rs  encryption.rs  signing.rs
placer-pack/src/keyuri/: bech32k.rs
placer-source-http/: Cargo.toml  README.md  test.sh
placer-source-http/src/: main.rs
src/: config.rs  digest.rs  error.rs  hook.rs  keyrings.rs  macros.rs  main.rs  pack.rs  source.rs  target_file.rs
src/config/: cache.rs  file_config.rs  log.rs  quarantine.rs  source.rs
src/keyrings/: config.rs  encryption.rs  signing.rs
