[package]
name        = "placer"
description = "Minimum viable configuration management"
version     = "0.0.1"
authors     = ["Tony Arcieri <tony@iqlusion.io>"]
license     = "MIT/Apache-2.0"
repository  = "https://github.com/tarcieri/placer"
edition     = "2018"
publish     = false # iqlusion-internal crate

[dependencies]
chrono = "0.4"
clear_on_drop = "0.2"
errno = "0.2"
failure = "0.1"
failure_derive = "0.1"
lazy_static = "1.0"
libc = "0.2"
placer-pack = { version = "0", path = "placer-pack", default-features = false }
serde = "1.0"
serde_derive = "1.0"
sha2 = "0.9"
# TODO: replace slog with log
slog = "= 2.1.1"
slog-async = "2"
slog-term = "2"
structopt = "0.3"
subprocess = "0.2"
toml = "0.5"
users = "0.11"
uuid = { version = "0.8", default-features = false }

[package.metadata.rpm.cargo]
buildflags = ["--release", "--all"]

[package.metadata.rpm.targets]
placer = { path = "/usr/sbin/placer" }
placer-pack = { path = "/usr/sbin/placer-pack" }
placer-source-http = { path = "/usr/sbin/placer-source-http" }

[package.metadata.rpm.files]
"placer.service" = { path = "/usr/lib/systemd/system/placer.service" }
"placer.toml" = { path = "/etc/placer/placer.toml", mode = "600" }
